<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/share_btn"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:src="@drawable/ic_share"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:tint="@color/colorIcons"
        app:layout_constraintEnd_toStartOf="@id/about_us_btn"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/about_us_btn"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_about_us"
        android:tint="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

<!--        <ImageView-->
<!--            android:layout_width="@dimen/_20sdp"-->
<!--            android:layout_height="@dimen/_20sdp"-->
<!--            android:contentDescription="@string/app_name"-->
<!--            android:src="@drawable/ic_search"-->
<!--            android:tint="@color/colorSearchIcon"-->

<!--            />-->

<!--        <EditText-->
<!--            android:id="@+id/input_search"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_35sdp"-->
<!--            android:layout_marginStart="@dimen/_12sdp"-->
<!--            android:background="@null"-->
<!--            android:fontFamily="@font/ubuntu_regular"-->
<!--            android:hint="@string/search_notes"-->
<!--            android:imeOptions="actionDone"-->
<!--            android:importantForAutofill="no"-->
<!--            android:includeFontPadding="false"-->
<!--            android:inputType="text"-->
<!--            android:textColor="@color/colorWhite"-->
<!--            android:textColorHint="@color/colorTextHint"-->
<!--            android:textSize="@dimen/_13ssp" />-->

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:gravity="start"
            android:iconifiedByDefault="false"
            android:textAlignment="textStart"
            app:iconifiedByDefault="false"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:queryHint="@string/search_notes"
            app:searchIcon="@drawable/ic_search"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            android:layoutDirection="ltr"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_actions"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_search"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/layout_quick_actions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorQuickActionsBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"

        >


    </LinearLayout>

    <ImageView
        android:id="@+id/add_note_main"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_actions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_quick_actions"
        />


    <!--    android:layout_marginEnd="@dimen/_30sdp"-->



</androidx.constraintlayout.widget.ConstraintLayout>